# mini-shell

./: CMakeLists.txt  README.md  main-loop.c
app/: CMakeLists.txt  myapp.c  myapp.h
lib/: CMakeLists.txt
lib/include/: common.h  csapp.h  job.h  shell.h
lib/src/: common.c  job.c  shell.c
test/: CMakeLists.txt  comm-test.cpp  external-test.cpp  job-test.cpp
